# LocoDrive

./: .gitignore  DEVELOPER_GUIDE.md  README.md  TestNet.java  TestResource.java  build_installer.sh  check_img.py  pom.xml
.github/workflows/: build-installers.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
installer/windows/: installer.iss
scripts/: build-appimage.sh  validate-build.ps1  validate-build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/java/com/locodrive/: App.java  AppContext.java  DebugLauncher.java  Launcher.java  ServerMain.java
src/main/java/com/locodrive/model/: ServerConfig.java  SharedFolder.java  User.java
src/main/java/com/locodrive/server/: ApiHandler.java  AuthHandler.java  FileHandler.java  LocalFileServer.java  SessionStore.java
src/main/java/com/locodrive/ui/: BaseStepController.java  DashboardController.java  FolderSetupController.java  MainController.java  NetworkSetupController.java  SecurityReviewController.java  UserManagementController.java  WelcomeController.java
src/main/java/com/locodrive/util/: ConfigManager.java  (+3 more)
src/main/resources/css/: app.css
src/main/resources/fxml/: DashboardView.fxml  FolderSetupView.fxml  MainView.fxml  NetworkSetupView.fxml  SecurityReviewView.fxml  UserManagementView.fxml  WelcomeView.fxml
ui/: index.html
ui/js/: api.js  app.js  router.js
ui/js/pages/: dashboard.js  folders.js  network.js  review.js  users.js  welcome.js
ui/styles/: app.css
