[package]
name = "locodrive"
version = "1.0.0"
description = "LocoDrive — Local Network File Sharing Server"
authors = ["LocoDrive"]
edition = "2021"

[lib]
name = "locodrive_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json", "native-tls"], default-features = false }
open          = "5"

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
